--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="podium">
         <div class="podium-slot silver-slot">
             <div class="game-card silver-card">
-                <div class="game-image2"></div>
+                <div class="game-image-2"></div>
                 <div class="game-info">
                     <h2 class="game-title">Fortnite</h2>
                     <p class="rank"><span>#2</span></p>
@@ -43,20 +43,23 @@
             </div>
         </div>
 
-        <div class="podium-slot gold-slot">
-            <div class="game-card gold-card">
-                <div class="game-image"></div>
-                <div class="game-info">
-                    <h2 class="game-title">Minecraft</h2>
-                    <p class="rank"><span>#1</span></p>
-                    <p class="monthly-players">228M+ Monthly Players</p>
+        <a href="Minecraft.html">
+            <div class="podium-slot gold-slot">
+                <div class="game-card gold-card">
+                    <div class="game-image-1"></div>
+                    <div class="game-info">
+                        <h2 class="game-title">Minecraft</h2>
+                        <p class="rank"><span>#1</span></p>
+                        <p class="monthly-players">228M+ Monthly Players</p>
+                    </div>
                 </div>
             </div>
-        </div>
+        </a>
+        
 
         <div class="podium-slot bronze-slot">
             <div class="game-card bronze-card">
-                <div class="game-image3"></div>
+                <div class="game-image-3"></div>
                 <div class="game-info">
                     <h2 class="game-title">Roblox</h2>
                     <p class="rank"><span>#3</span></p>
@@ -77,11 +80,6 @@
             { title: "Roblox" },
             { title: "Counter-Strike 2"},
             { title: "Apex Legends" },
-            { title: "League of Legends" },
-            { title: "Call of Duty: Warzone" },
-            { title: "Valorant" },
-            { title: "Dota 2"},
-            { title: "PUBG: Battlegrounds"}
         ];
 
         const searchInput = document.getElementById("search");
