--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
         </div>
 
-        <a href="Minecraft.html">
+        <a href="minecraft.html">
             <div class="podium-slot gold-slot">
                 <div class="game-card gold-card">
                     <div class="game-image-1"></div>
