--- a/index.html
+++ b/index.html
@@ -32,16 +32,19 @@
     <h2 class="podium-title">Most Popular</h2>
 
     <div class="podium">
-        <div class="podium-slot silver-slot">
-            <div class="game-card silver-card">
-                <div class="game-image-2"></div>
-                <div class="game-info">
-                    <h2 class="game-title">Fortnite</h2>
-                    <p class="rank"><span>#2</span></p>
-                    <p class="monthly-players">223M+ Monthly Players</p>
+    
+        <a href="fortnite.html" class="podium-button">
+            <div class="podium-slot silver-slot">
+                <div class="game-card silver-card">
+                    <div class="game-image-2"></div>
+                    <div class="game-info">
+                        <h2 class="game-title">Fortnite</h2>
+                        <p class="rank"><span>#2</span></p>
+                        <p class="monthly-players">223M+ Monthly Players</p>
+                    </div>
                 </div>
             </div>
-        </div>
+        </a>
 
         <a href="minecraft.html" class="podium-button">
             <div class="podium-slot gold-slot">
